# AgentSkein

./: .env.example  .gitignore  AGENTS_INTEGRATION_GUIDE.md  CONTEXT.md  DOCS_VERIFICATION_REPORT.md  Dockerfile  LICENSE  README.md  TECHNICAL_REVIEW_REPORT.md  docker-compose.yml  fix_venv_packages.ps1  pyproject.toml  quickstart.py  setup_windows.ps1
.github/workflows/: ci.yml
agents/: README.md  ai_ecosystem_report.txt  analyst_agent.py  base_agent.py  metadata.json  orchestrator_agent.py  researcher_agent.py  run_agents.py  safety_agent.py  test_all_features.py  writer_agent.py
agentskein/: __init__.py  cli.py  client.py
agentskein/adapters/: __init__.py  autogen_adapter.py  crewai_adapter.py  langgraph_adapter.py
agentskein/protocol/: __init__.py  namespace.py  poisoning.py  semantic_merge.py  types.py
agentskein/storage/: __init__.py  base.py  memory_backend.py  redis_backend.py  sqlite_backend.py
core/: Cargo.toml
core/src/: lib.rs
docs/: README.md
examples/crewai/: crewai_example.py
examples/langgraph/: langgraph_example.py
examples/n8n_api_server/: server.py
examples/raw_api/: multi_agent_demo.py
experiment_results/: .gitkeep  run_summary.json  run_summary.md
experiment_results/docs_readme_autogen_put_get_broken/: result.json  stderr.txt
experiment_results/docs_readme_autogen_remember_recall/: result.json  stdout.txt
experiment_results/examples_raw_api_multi_agent_demo/: result.json  stdout.txt
experiment_results/guide_branches_list/: result.json
experiment_results/guide_l242_post_init_namespace/: result.json
experiment_results/guide_l268_fork_and_merge/: result.json
experiment_results/guide_l299_detect_poisoning/: result.json
experiment_results/guide_l319_write_then_read/: result.json
experiment_results/guide_l357_get_snapshot/: result.json
experiment_results/guide_l401_get_health/: result.json
experiment_results/guide_l432_langgraph_checkpointer_construct/: result.json
experiment_results/guide_l502_crewai_storage_direct/: result.json  stdout.txt
experiment_results/guide_l551_autogen_remember_recall/: result.json  stdout.txt
experiment_results/readme_l122_quickstart_inline/: result.json  stdout.txt
experiment_results/readme_l150_quickstart_subprocess/: result.json  stdout.txt
experiment_results/readme_l181_five_agent_pipeline/: result.json  stdout.txt
experiment_results/readme_l184_ai_ecosystem_report_has_seven_sections/: result.json
experiment_results/readme_l260_backend_construction/: result.json  stdout.txt
experiment_results/readme_l282_langgraph_checkpointer/: result.json  stdout.txt
experiment_results/readme_l346_comparison_run_all_benchmarks/: result.json
test_results/: .gitkeep  run_summary.json  run_summary.md
tests/: RUN_EXPERIMENTS.md  RUN_TESTS.md
tests/e2e/: test_multi_agent_scenarios.py
(+37 files in other folders)
