[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "agentskein"
version = "0.1.0"
description = "Cross-agent shared memory with Git-semantics and conflict resolution"
authors = [{ name = "AgentSkein Contributors", email = "hello@agentskein.dev" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
readme = "README.md"
keywords = ["llm", "agents", "memory", "multi-agent", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
]
dependencies = [
  "redis>=5.0.0",
  "aiosqlite>=0.19.0",        # [B9] SQLite backend
  "pydantic>=2.6.0",
  "anyio>=4.3.0",
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "click>=8.1.7",
  "structlog>=24.1.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "ulid-py>=1.1.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0", "langchain-core>=0.2.0"]
crewai    = ["crewai>=0.28.0"]
autogen   = ["pyautogen>=0.2.0"]
dev = [
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-benchmark>=4.0.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
  "hypothesis>=6.100.0",
  "faker>=24.0.0",
  "testcontainers>=4.4.0",
]

[project.scripts]
agentskein = "agentskein.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "agentskein._core"
python-source = "."
manifest-path = "core/Cargo.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agentskein --cov-report=term-missing -v"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "A", "C4", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
